[AKRMDL-621] accept osm & geojson format to enrich navitia api